--- a/Demo20181207.ipynb
+++ b/Demo20181207.ipynb
@@ -494,6 +494,108 @@
     "\"\"\") \n",
     "best_movies.show(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movie Recommendation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "rawData = sc.textFile(\"/tmp/u.data\") \n",
+    "rawData.first() \n",
+    "\n",
+    "rawRatings = rawData.map(lambda e: e.split()) \n",
+    "rawRatings.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "from pyspark.sql import Row\n",
+    "ratingsRDD = rawRatings.map(\\\n",
+    "    lambda p: Row(userId=int(p[0]), \\\n",
+    "    movieId=int(p[1]), \\\n",
+    "    rating=float(p[2]), \\\n",
+    "    timestamp=int(p[3])))\n",
+    "    \n",
+    "ratings = spark.createDataFrame(ratingsRDD)\n",
+    "(training, test) = ratings.randomSplit([0.8, 0.2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "from pyspark.ml.recommendation import ALS\n",
+    "als = ALS(rank=50, maxIter=10, regParam=0.01, \\\n",
+    "    userCol=\"userId\", itemCol=\"movieId\", \\\n",
+    "    ratingCol=\"rating\")\n",
+    "model = als.fit(training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "model.userFactors.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "model.itemFactors.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "userRecs = model.recommendForAllUsers(10)\n",
+    "userRecs.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pyspark\n",
+    "movieRecs = model.recommendForAllItems(10)\n",
+    "movieRecs.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
