--- a/Demo20181214.ipynb
+++ b/Demo20181214.ipynb
@@ -336,6 +336,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 金融公司分類\n",
+    "- https://zh.wikipedia.org/wiki/Category:%E8%87%BA%E7%81%A3%E7%9A%84%E9%87%91%E8%9E%8D%E6%8E%A7%E8%82%A1%E5%85%AC%E5%8F%B8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "company_list = pandas.read_clipboard(header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['第一金融控股',\n",
+       " '富邦金融控股',\n",
+       " '國泰金融控股',\n",
+       " '國票金融控股',\n",
+       " '華南金融控股',\n",
+       " '日盛金融控股',\n",
+       " '台新金融控股',\n",
+       " '臺灣金融控股',\n",
+       " '新光金融控股',\n",
+       " '元大金融控股',\n",
+       " '永豐金融控股',\n",
+       " '玉山金融控股',\n",
+       " '中華開發金融控股',\n",
+       " '兆豐金融控股',\n",
+       " '中國信託金融控股',\n",
+       " '合作金庫金融控股']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company_list[0].tolist()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
