--- a/Demo20181214.ipynb
+++ b/Demo20181214.ipynb
@@ -842,6 +842,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓取 PTT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "cookies = {'over18':'1'}\n",
+    "res = requests.get('https://www.ptt.cc/bbs/Creditcard/index.html', cookies = cookies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#res.text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
