--- a/Demo20181214.ipynb
+++ b/Demo20181214.ipynb
@@ -886,6 +886,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pagenum = int(soup.select('.btn')[3].get('href').split('index')[1].split('.html')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2897\n",
+      "2896\n",
+      "2895\n",
+      "2894\n",
+      "2893\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ele in range(pagenum, pagenum - 5, -1):\n",
+    "    print(ele)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
@@ -1041,10 +1072,329 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2897\n",
+      "2896\n",
+      "2895\n",
+      "2894\n",
+      "2893\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "cookies = {'over18':'1'}\n",
+    "res = requests.get('https://www.ptt.cc/bbs/Creditcard/index.html', cookies = cookies)\n",
+    "soup = BeautifulSoup(res.text, 'lxml')\n",
+    "\n",
+    "pagenum = int(soup.select('.btn')[3].get('href').split('index')[1].split('.html')[0])\n",
+    "articles = []\n",
+    "for p in range(pagenum, pagenum - 5, -1):\n",
+    "    res = requests.get('https://www.ptt.cc/bbs/Creditcard/index{}.html'.format(p), cookies = cookies)\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    domain = 'https://www.ptt.cc'\n",
+    "    for ent in soup.select('.r-ent'):\n",
+    "        if ent.select_one('a'):\n",
+    "            article = {}\n",
+    "            article['cnt'] = ent.select_one('.nrec').text.strip()\n",
+    "            article['title'] = ent.select_one('.title').text.strip()\n",
+    "            article['link']   = domain + ent.select_one('a').get('href')\n",
+    "            article['author'] = ent.select_one('.author').text.strip()\n",
+    "            articles.append(article)\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>cnt</th>\n",
+       "      <th>link</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MONTECARLOO</td>\n",
+       "      <td>24</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1544668059...</td>\n",
+       "      <td>[閒聊] 2019頂級卡，請推薦</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KSchuang</td>\n",
+       "      <td>3</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1544671503...</td>\n",
+       "      <td>Re: [閒聊] 2019頂級卡推薦</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tengobo</td>\n",
+       "      <td>8</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1544671942...</td>\n",
+       "      <td>[問題] 玉山pi錢包信用卡</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        author cnt                                               link  \\\n",
+       "0  MONTECARLOO  24  https://www.ptt.cc/bbs/creditcard/M.1544668059...   \n",
+       "1     KSchuang   3  https://www.ptt.cc/bbs/creditcard/M.1544671503...   \n",
+       "2      tengobo   8  https://www.ptt.cc/bbs/creditcard/M.1544671942...   \n",
+       "\n",
+       "                title  \n",
+       "0    [閒聊] 2019頂級卡，請推薦  \n",
+       "1  Re: [閒聊] 2019頂級卡推薦  \n",
+       "2      [問題] 玉山pi錢包信用卡  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "df = pandas.DataFrame(articles)\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get('https://www.ptt.cc/bbs/creditcard/M.1544685460.A.38C.html')\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadic = {}\n",
+    "for meta in soup.select('.article-metaline'):\n",
+    "    metadic[meta.select_one('.article-meta-tag').text] = meta.select_one('.article-meta-value').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'作者': 'LIN9 (LIN9)',\n",
+       " '時間': 'Thu Dec 13 15:17:37 2018',\n",
+       " '標題': '[新聞] 驚！明年5大信用卡狂砍優惠\\u3000折現金、될'}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n新聞來源:蘋果\\n\\n新聞標題:驚！明年5大信用卡狂砍優惠\\u3000折現金、換哩程統統縮水\\n\\n新聞內容:\\n年底聖誕跨年到明年2月農曆過年消費高峰，但逢新舊年度交接，明年起信用卡權益再見\\n縮水，多家銀行近日陸續公告新辦法，範圍從點數累積、紅利折抵、停車優惠等門檻的提\\n高。\\n\\n花旗銀公布從明年1月27日起「饗樂生活卡」紅利折抵威秀影城消費，從每15點提高至20\\n點才可以折抵1元；另包括「鑽石卡」、「超級紅利回饋卡」、「饗樂生活卡」等卡別同\\n樣折抵王品集團旗下指定品牌餐廳也是提高至20點1元。\\n\\n另外花旗也規定明年1月27日起包含亞洲萬里通、中華、長榮、新加坡、泰國航空、及優\\n悅會/IHG洲際酒店點數轉換3點＝1里數／會員積分變更成每6000點 = 1200里數／會員積\\n分；若以目前來換算6000點可以換到2000里數／會員積分，新制兌換起點、可換里數門檻\\n都大幅升高。\\n\\n凱基銀也公告從明年起信用卡在特店刷卡使用分期消費服務，不再計算現金回饋或紅利積\\n點。新光銀對刷卡支付新光人壽從現行除傳統型續期保險費或投資型保單不計入計算外，\\n從明年起所有保費都不能累積紅利或現金回饋。\\n\\n在停車部分，聯邦銀行微風聯名卡中針對微風「南京館」從明年起平日停車優惠加入必需\\n消費規定，無限卡平假日加入「不限金額任刷一筆」才可以享停車優惠4小時，御璽、鈦\\n金、晶緻卡平日消費需刷卡300元，白金卡平日消費需刷卡200元才可以享有停車優惠3小\\n時，假日規範不變。\\n\\n國泰世華銀目前提供世界卡、無限卡國際機場外圍停車權益只要8成以上國外旅遊團費或\\n機票就可以享有每次30天免費，但明年起規定單筆刷卡金額需達1萬元以上。至於商務卡\\n、御璽卡、白金卡 等過去只對每次免費天數限7天，現新增一年僅限2次。\\n\\n王道銀行(2897)簽帳金融卡明年回饋也將大幅縮水，王道卡友原先祭出國內消費1.5%、海\\n外消費2.3%現金回饋無上限，但明年起僅享1%無上限。若是滿足條件的加碼回饋，亦修改\\n為國內消費僅1.3%，海外減少至1.8%回饋金。\\n\\n中國信託商銀的LINE Pay信用卡，現一般消費可享最高LINE Points2%點數回饋，1點等同\\n於現金1元，且線上線下合計超過5萬個支付點，但明年傳出回饋要從2%縮水至1%。（林潔\\n禎／台北報導）\\n\\n新聞網址:'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('#main-content').contents[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a href=\"https://goo.gl/k8Sszi\" rel=\"nofollow\" target=\"_blank\">https://goo.gl/k8Sszi</a>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('#main-content').contents[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n\\n--\\n'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('#main-content').contents[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maincontent = soup.select_one('#main-content')\n",
+    "article_contents = []\n",
+    "for c in maincontent.contents[4:]:\n",
+    "    #print(str(c))\n",
+    "    if str(c).strip() == '--':\n",
+    "        break\n",
+    "    article_contents.append(str(c).strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'新聞來源:蘋果\\n\\n新聞標題:驚！明年5大信用卡狂砍優惠\\u3000折現金、換哩程統統縮水\\n\\n新聞內容:\\n年底聖誕跨年到明年2月農曆過年消費高峰，但逢新舊年度交接，明年起信用卡權益再見\\n縮水，多家銀行近日陸續公告新辦法，範圍從點數累積、紅利折抵、停車優惠等門檻的提\\n高。\\n\\n花旗銀公布從明年1月27日起「饗樂生活卡」紅利折抵威秀影城消費，從每15點提高至20\\n點才可以折抵1元；另包括「鑽石卡」、「超級紅利回饋卡」、「饗樂生活卡」等卡別同\\n樣折抵王品集團旗下指定品牌餐廳也是提高至20點1元。\\n\\n另外花旗也規定明年1月27日起包含亞洲萬里通、中華、長榮、新加坡、泰國航空、及優\\n悅會/IHG洲際酒店點數轉換3點＝1里數／會員積分變更成每6000點 = 1200里數／會員積\\n分；若以目前來換算6000點可以換到2000里數／會員積分，新制兌換起點、可換里數門檻\\n都大幅升高。\\n\\n凱基銀也公告從明年起信用卡在特店刷卡使用分期消費服務，不再計算現金回饋或紅利積\\n點。新光銀對刷卡支付新光人壽從現行除傳統型續期保險費或投資型保單不計入計算外，\\n從明年起所有保費都不能累積紅利或現金回饋。\\n\\n在停車部分，聯邦銀行微風聯名卡中針對微風「南京館」從明年起平日停車優惠加入必需\\n消費規定，無限卡平假日加入「不限金額任刷一筆」才可以享停車優惠4小時，御璽、鈦\\n金、晶緻卡平日消費需刷卡300元，白金卡平日消費需刷卡200元才可以享有停車優惠3小\\n時，假日規範不變。\\n\\n國泰世華銀目前提供世界卡、無限卡國際機場外圍停車權益只要8成以上國外旅遊團費或\\n機票就可以享有每次30天免費，但明年起規定單筆刷卡金額需達1萬元以上。至於商務卡\\n、御璽卡、白金卡 等過去只對每次免費天數限7天，現新增一年僅限2次。\\n\\n王道銀行(2897)簽帳金融卡明年回饋也將大幅縮水，王道卡友原先祭出國內消費1.5%、海\\n外消費2.3%現金回饋無上限，但明年起僅享1%無上限。若是滿足條件的加碼回饋，亦修改\\n為國內消費僅1.3%，海外減少至1.8%回饋金。\\n\\n中國信託商銀的LINE Pay信用卡，現一般消費可享最高LINE Points2%點數回饋，1點等同\\n於現金1元，且線上線下合計超過5萬個支付點，但明年傳出回饋要從2%縮水至1%。（林潔\\n禎／台北報導）\\n\\n新聞網址: <a href=\"https://goo.gl/k8Sszi\" rel=\"nofollow\" target=\"_blank\">https://goo.gl/k8Sszi</a>'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(article_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getArticle(url):\n",
+    "    res = requests.get(url)\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    dic = {}\n",
+    "    for meta in soup.select('.article-metaline'):\n",
+    "        dic[meta.select_one('.article-meta-tag').text] = meta.select_one('.article-meta-value').text\n",
+    "    maincontent = soup.select_one('#main-content')\n",
+    "    article_contents = []\n",
+    "    for c in maincontent.contents[4:]:\n",
+    "        article_contents.append(str(c).strip()) \n",
+    "        if '--' in str(c).strip():\n",
+    "            break\n",
+    "    dic['content'] = ' '.join(article_contents)\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'content': '修改了標題，我是希望大家推薦，不是我要推薦啦~XP\\n\\n這幾天在幫家人挑選適合的頂卡，主要看的是機場接送/貴賓室/市區停車/免年費資格幾\\n項，申請者的年收200~300，應該都符合申請門檻，但免年費的認定含稅不含稅就差異很\\n大了（希望可用稅養）\\n\\n鎖定了以下幾張：\\n\\n● 中信鼎極：年消費36萬認定含稅，年收符合又是薪轉户，雖然權益縮水，原本以為最\\n容易，但後來發現現在取消首年免年費（需符合某些條件)，後來就殘念了\\n\\n●  玉山世界：申請與年費門檻都算低，貴賓室使用條件也不難（六個月內刷機票團費，\\n前一個月消費5000)，但機場接送要刷滿兩萬，日本線很容易達不到，這張應該會申請來\\n備用 （但看板上說2019權益會再縮……要觀望）\\n\\n● 日盛無限：網頁上就可下載申請書，免年費門檻是很硬的一般消費30萬，但貴賓室機\\n場接送只要三個月內刷，都沒金額限制，停車也是上期有新增消費即可，如果2019權益不\\n改，還不錯\\n\\n● 富邦世界（或尊御世界）\\n這兩張差在免年費認定前者含稅後者不含，其實如果使用量不大，刷6000就可以使用貴賓\\n室跟接送，世界卡容易養，尊御適合出國中度使用者，但是……昨天收到理專通知，我自\\n己使用中的尊御修改了2019權益，看完後覺得如果尊御都這樣，世界卡應該也會再縮……\\n（觀望中） <a href=\"https://i.imgur.com/KB6hJO8.jpg\" rel=\"nofollow\" target=\"_blank\">https://i.imgur.com/KB6hJO8.jpg</a>  <div class=\"richcontent\"><blockquote class=\"imgur-embed-pub\" data-id=\"KB6hJO8\" lang=\"en\"><a href=\"//imgur.com/KB6hJO8\"></a></blockquote><script async=\"\" charset=\"utf-8\" src=\"//s.imgur.com/min/embed.js\"></script></div> 請問還有沒有比較推薦或值得注意的頂卡呢？ 先謝謝各位前輩了~\\n\\n--',\n",
+       " '作者': 'MONTECARLOO (快樂是最重要的)',\n",
+       " '時間': 'Thu Dec 13 10:27:37 2018',\n",
+       " '標題': '[閒聊] 2019頂級卡,請推薦'}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getArticle('https://www.ptt.cc/bbs/creditcard/M.1544668059.A.C5F.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "totalarticles = []\n",
+    "for ele in articles:\n",
+    "    totalarticles.append(getArticle(ele.get('link')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "totaldf = pandas.DataFrame(totalarticles)\n",
+    "totaldf"
+   ]
   }
  ],
  "metadata": {
