--- a/Demo20181214.ipynb
+++ b/Demo20181214.ipynb
@@ -2279,6 +2279,214 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place = '火鍋106粵式豬肚雞煲鍋 南京總店'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get('https://maps.googleapis.com/maps/api/place/textsearch/json?query={}&key={}'.format(place, key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "placeid = res.json()['results'][0]['place_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res2 = requests.get('https://maps.googleapis.com/maps/api/place/details/json?placeid={}&key={}'.format(placeid, key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'html_attributions': [],\n",
+       " 'result': {'address_components': [{'long_name': '12',\n",
+       "    'short_name': '12',\n",
+       "    'types': ['street_number']},\n",
+       "   {'long_name': 'Section 3, Nanjing East Road',\n",
+       "    'short_name': 'Section 3, Nanjing East Road',\n",
+       "    'types': ['route']},\n",
+       "   {'long_name': 'Zhongshan District',\n",
+       "    'short_name': 'Zhongshan District',\n",
+       "    'types': ['administrative_area_level_3', 'political']},\n",
+       "   {'long_name': 'Taipei City',\n",
+       "    'short_name': 'Taipei City',\n",
+       "    'types': ['administrative_area_level_1', 'political']},\n",
+       "   {'long_name': 'Taiwan',\n",
+       "    'short_name': 'TW',\n",
+       "    'types': ['country', 'political']},\n",
+       "   {'long_name': '10491', 'short_name': '10491', 'types': ['postal_code']}],\n",
+       "  'adr_address': '<span class=\"street-address\">No. 12, Section 3, Nanjing East Road</span>, <span class=\"locality\">Zhongshan District</span>, <span class=\"region\">Taipei City</span>, <span class=\"country-name\">Taiwan</span> <span class=\"postal-code\">10491</span>',\n",
+       "  'formatted_address': 'No. 12, Section 3, Nanjing East Road, Zhongshan District, Taipei City, Taiwan 10491',\n",
+       "  'formatted_phone_number': '02 2507 1135',\n",
+       "  'geometry': {'location': {'lat': 25.0517813, 'lng': 121.5374186},\n",
+       "   'viewport': {'northeast': {'lat': 25.0532007802915,\n",
+       "     'lng': 121.5387691302915},\n",
+       "    'southwest': {'lat': 25.05050281970849, 'lng': 121.5360711697085}}},\n",
+       "  'icon': 'https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png',\n",
+       "  'id': 'a639b10cdefd94c54a9c47479f252b2fc5769093',\n",
+       "  'international_phone_number': '+886 2 2507 1135',\n",
+       "  'name': '火鍋106粵式豬肚雞煲鍋 南京總店',\n",
+       "  'opening_hours': {'open_now': True,\n",
+       "   'periods': [{'close': {'day': 0, 'time': '2300'},\n",
+       "     'open': {'day': 0, 'time': '1130'}},\n",
+       "    {'close': {'day': 1, 'time': '2300'}, 'open': {'day': 1, 'time': '1130'}},\n",
+       "    {'close': {'day': 2, 'time': '2300'}, 'open': {'day': 2, 'time': '1130'}},\n",
+       "    {'close': {'day': 3, 'time': '2300'}, 'open': {'day': 3, 'time': '1130'}},\n",
+       "    {'close': {'day': 4, 'time': '2300'}, 'open': {'day': 4, 'time': '1130'}},\n",
+       "    {'close': {'day': 5, 'time': '2300'}, 'open': {'day': 5, 'time': '1130'}},\n",
+       "    {'close': {'day': 6, 'time': '2300'}, 'open': {'day': 6, 'time': '1130'}}],\n",
+       "   'weekday_text': ['Monday: 11:30 AM – 11:00 PM',\n",
+       "    'Tuesday: 11:30 AM – 11:00 PM',\n",
+       "    'Wednesday: 11:30 AM – 11:00 PM',\n",
+       "    'Thursday: 11:30 AM – 11:00 PM',\n",
+       "    'Friday: 11:30 AM – 11:00 PM',\n",
+       "    'Saturday: 11:30 AM – 11:00 PM',\n",
+       "    'Sunday: 11:30 AM – 11:00 PM']},\n",
+       "  'photos': [{'height': 3024,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/109924070899395830505/photos\">Roger Yu</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAeWvirh_xqU3ZhaMgFa2nPiRsbWEyvGu5_gtO0pO5naDC4VilIdv6g7fSTdK8zW0d-GrxA1CVARKunGpgEOwgZp18MhRIG-0_sBsoZ6AKR6t63VFY8P1cxsWaURlV1o_bEhDfwkFGvswm1JcIOPErqi-QGhTlskAyx-qBoozw5CLwY__9gbIjRw',\n",
+       "    'width': 4032},\n",
+       "   {'height': 1080,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/109406901007829988393/photos\">RedLeo Lin</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAwBPD3n1HxqtAs8vT8bvyL7zJwIKUL3cXJ7ej5U4t7hqb6Hdx874uSpW1TxgXsMwULcwe0oxssBep1Cgm6k8Bhqp6jIAnUyUm5XmocTs8gkGwY0cgTskCNry8SIZspCW0EhD_eALUDz8fdZ0IHat1nJCnGhREOBabHj7Ta9WwiSi08Re9RwbSiA',\n",
+       "    'width': 1616},\n",
+       "   {'height': 3024,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/111993278802750937714/photos\">莊雅淳</a>'],\n",
+       "    'photo_reference': 'CmRaAAAA2qFVBEqT3FBnGzBR4OZywW9H06ivRAytVv-LKW5vsFqHmw2Ft4zjX86AdLJ12jJU8JpTN7LLutNDLd31GASLwEo4pXr9AKFjCbjYFNmlwwdZXzgxmGHJ0y31G0KK4GSPEhCW8R_sFf5f691JwtCZt3zyGhSQK676jaKv-Rlo9JvoILeZgxJMVQ',\n",
+       "    'width': 4032},\n",
+       "   {'height': 3024,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/102870300857303904224/photos\">James C.N. Huang</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAHjRga4ZZwzjXQpC6hygWua7ca5gkFkMVcRB41xYml44yvKZFx92Ra0noExzhScvRytAPSfaspZWM143Ig7IoUkFYwFEfKSjtKNpt_2EnUszSfe4ue9x8loBLdyjdYkyHEhA5Cq4RRSaH4IgcY5IBaw8-GhR4PvcLZ7aYjHCOKyPu-M2rpxeY2Q',\n",
+       "    'width': 3024},\n",
+       "   {'height': 2976,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/100984400130175606254/photos\">Chao-Ching Hsu</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAhlVT58CI29LzVKcvzdyKAis1_bstD7IZfdGMFwIkDfqyqe64xe2MaGWPOGZ2WpAyBESAyiqMj-N8RaWGpjwowfhMlgf9_4rKfQp85BXG9a71GADPiV_kRriDdg2716U8EhA9yT_3WOZm2PNXMNSgaxHpGhQVbyoupUirPDMtMtTHrJS2i7peyQ',\n",
+       "    'width': 3968},\n",
+       "   {'height': 3024,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/108139060777892740460/photos\">Carol TSAI</a>'],\n",
+       "    'photo_reference': 'CmRaAAAATwej45g-L-77icBY9_13orp6Gqd2741tJcY26hr31phGQM-evUos2knuMqc53IuSa4Q8OEEPkaPWJMlHXK54-LqAX9W-9dH5ZUowwAaI90FQ3W27CnkO8O8enTg7djRVEhDFnNH7fAO63gozDZeuCUj3GhR9PdjVwSfaIH-aDqq2J01ZEWEMhQ',\n",
+       "    'width': 4032},\n",
+       "   {'height': 1080,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/109406901007829988393/photos\">RedLeo Lin</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAXflmlCsyQF-hfXW0hJ99GLiosWasb7Th0mKq4dhiaQgiZopW8kyb9dpuEqfBe930sNi-ToePokUakEjpi5QJxwX6n6Kar-6g_ANP1h-ft3eN1DuObxXjE_Bd3uALKzmwEhCNoO9gfp6z99hnFq0MtFK7GhSwVB76ywIugroC5OQJkH6wSQM5iA',\n",
+       "    'width': 1616},\n",
+       "   {'height': 2340,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/114615576661275464143/photos\">蔡孟宏</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAyv35uZdfazDvT-yE3t5qw3_HElmd25OKzrRVjGCaKf9YUtuL2H5tSFeVKzH8y2wv7hY7NPtUnP3Y95sUbgRgRCv-iEg0RvF2jipW46c2oiD0CTsLCGkjz5wEGKa5kLnfEhDmWDsAxjg0F9JpPBWTNlulGhQ5m0w80uzoG-Y6AxI4Lw0UnLfbiQ',\n",
+       "    'width': 4160},\n",
+       "   {'height': 3916,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/108108508655055345997/photos\">KAREN HUANG MARIOLLE</a>'],\n",
+       "    'photo_reference': 'CmRaAAAA7RIKDVin3rRiwq6CZqg5dLUXDtCuwusKGavNbYOzoN3Tlgwao6I2dU6x4B8pnZHnSnw1fMjQfl9MHkwJoImN34Voxcyr9xYHuu1RjFFYJCmhfOpt_A-gVwGt9keuXTPtEhCqUEVhbIcVZTrhnSaCiTzjGhRr4DwVlrihMo0GYS_u5IQvnkmAlw',\n",
+       "    'width': 2204},\n",
+       "   {'height': 2160,\n",
+       "    'html_attributions': ['<a href=\"https://maps.google.com/maps/contrib/117375340591200749698/photos\">翁凱莉</a>'],\n",
+       "    'photo_reference': 'CmRaAAAAg6tHJoa44S7046euA893Tdf9qEhY33LGCy7TdT0GabHWXSDWlnxKnE6B3fRul5uaoPg3_MJqKiHAnd0CE5SQJdEwy8DXj2IkJkkz-0qjqBglViRYsi-D5JZ6Vw2AsjISEhDxzlTflGMmJvl_K2BILWBWGhSQ3em5YzPZ8J-b09u5xLl1ndCW2g',\n",
+       "    'width': 2675}],\n",
+       "  'place_id': 'ChIJOZ7Jhd-rQjQRWn0UcHeas2k',\n",
+       "  'plus_code': {'compound_code': '3G2P+PX Taipei, Taiwan',\n",
+       "   'global_code': '7QQ33G2P+PX'},\n",
+       "  'price_level': 2,\n",
+       "  'rating': 4.2,\n",
+       "  'reference': 'ChIJOZ7Jhd-rQjQRWn0UcHeas2k',\n",
+       "  'reviews': [{'author_name': 'Jerry Yang',\n",
+       "    'author_url': 'https://www.google.com/maps/contrib/106028794830583341007/reviews',\n",
+       "    'language': 'en',\n",
+       "    'profile_photo_url': 'https://lh4.googleusercontent.com/-ySb8D22i7fQ/AAAAAAAAAAI/AAAAAAAAABs/Xj1oSiLuGrk/s128-c0x00000000-cc-rp-mo-ba5/photo.jpg',\n",
+       "    'rating': 5,\n",
+       "    'relative_time_description': 'a month ago',\n",
+       "    'text': 'Worth to visit.\\nHigh quality food also the reasonable price.\\nSeafood was good, however I recommend meat and mushroom much more than. Suggestion, better to have a reservation otherwise it will be a long queue.',\n",
+       "    'time': 1539793746},\n",
+       "   {'author_name': 'Jean Lin',\n",
+       "    'author_url': 'https://www.google.com/maps/contrib/106978260953371133400/reviews',\n",
+       "    'language': 'en',\n",
+       "    'profile_photo_url': 'https://lh5.googleusercontent.com/-Cc_eb51MAaM/AAAAAAAAAAI/AAAAAAAACpM/GcDnHVHJki8/s128-c0x00000000-cc-rp-mo-ba4/photo.jpg',\n",
+       "    'rating': 5,\n",
+       "    'relative_time_description': '2 months ago',\n",
+       "    'text': 'Great service and food, suggest to visit as a group more than 4 to try more plates.',\n",
+       "    'time': 1539130469},\n",
+       "   {'author_name': 'Jim Lai',\n",
+       "    'author_url': 'https://www.google.com/maps/contrib/100045231038868538406/reviews',\n",
+       "    'language': 'en',\n",
+       "    'profile_photo_url': 'https://lh4.googleusercontent.com/-9eEMNiXgtjM/AAAAAAAAAAI/AAAAAAAAKn8/KYOIfxOgeRU/s128-c0x00000000-cc-rp-mo-ba2/photo.jpg',\n",
+       "    'rating': 1,\n",
+       "    'relative_time_description': 'in the last week',\n",
+       "    'text': '服務員態度不好，已告知不吃牛肉，還再三確認，最後結帳才知道是牛肉，非常爛的服務',\n",
+       "    'time': 1544347999},\n",
+       "   {'author_name': 'RICHARD W',\n",
+       "    'author_url': 'https://www.google.com/maps/contrib/113190235697266358858/reviews',\n",
+       "    'language': 'en',\n",
+       "    'profile_photo_url': 'https://lh5.googleusercontent.com/-0cI9hJw_OpQ/AAAAAAAAAAI/AAAAAAAAAAA/AGDgw-i57dqO9at83DIGGYvMtFVmMHEh9Q/s128-c0x00000000-cc-rp-mo-ba6/photo.jpg',\n",
+       "    'rating': 4,\n",
+       "    'relative_time_description': '7 months ago',\n",
+       "    'text': 'Nice soup with heavy pepper',\n",
+       "    'time': 1525012357},\n",
+       "   {'author_name': 'Dennis Tzou',\n",
+       "    'author_url': 'https://www.google.com/maps/contrib/106277141340844522219/reviews',\n",
+       "    'language': 'en',\n",
+       "    'profile_photo_url': 'https://lh3.googleusercontent.com/-8j28z-4gEz0/AAAAAAAAAAI/AAAAAAAAAAA/AGDgw-iSxFF_-vyv3TXahfkyq9j3N3LJyA/s128-c0x00000000-cc-rp-mo-ba5/photo.jpg',\n",
+       "    'rating': 3,\n",
+       "    'relative_time_description': 'a year ago',\n",
+       "    'text': \"Good chicken soup available in Taipei.  But it's far behind what I had in Zhongshan Guangdong.  Too much pepper taste.   Cannot taste chicken at all.  Limited dining time to 2 hours.   This is ridiculous. The beef is good though.   \",\n",
+       "    'time': 1483183104}],\n",
+       "  'scope': 'GOOGLE',\n",
+       "  'types': ['restaurant', 'point_of_interest', 'food', 'establishment'],\n",
+       "  'url': 'https://maps.google.com/?cid=7616601232585817434',\n",
+       "  'utc_offset': 480,\n",
+       "  'vicinity': 'No. 12, Section 3, Nanjing East Road, Zhongshan District',\n",
+       "  'website': 'http://www.hotpot106.com.tw/'},\n",
+       " 'status': 'OK'}"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res2.json()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
